# nonebot_plugin_charpic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
nonebot_plugin_charpic/: __init__.py  adapter.py  data_source.py  depends.py
