[project]
name = "nonebot-plugin-charpic"
version = "0.1.1"
description = "Generate picture(or GIF) by characters"
authors = [
    {name = "1umine", email = "a1628420979@163.com"},
]
dependencies = [
    "Pillow>=9.0.0,<10.0",
    "aiohttp>=3.8.0,<4.0",
    "imageio>=2.9.0,<3.0",
    "nonebot2>=2.0,<3.0",
    "nonebot-adapter-onebot>=2.0,<3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
